adelanto de la clase 30-08-2023

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Wallet App</string>
+    <string name="text_new_account">Nueva Cuenta</string>
+    <string name="text_btn_save">Guardar</string>
 </resources>
