adelanto de la clase /09/23

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Wallet App</string>
     <string name="text_new_account">Nueva Cuenta</string>
     <string name="text_btn_save">Guardar</string>
+    <string name="text_new_category">Nueva categoria</string>
+
 </resources>
+
